--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>sahil sumra</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
@@ -275,7 +275,7 @@
                   <div class="col-md-6">
                     <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                       <a href="#graphic-design">
-                        <figure class="cc-effect"><img src="/images/istockphoto-1174690086-1024x1024.jpg" alt="Image" />
+                        <figure class="cc-effect"><img src="images/istockphoto-1174690086-1024x1024.jpg" alt="Image" />
                           <figcaption>
                             <div class="h4">Recent Project</div>
                             <p>App Development</p>
@@ -285,7 +285,7 @@
                     </div>
                     <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                       <a href="#graphic-design">
-                        <figure class="cc-effect"><img src="/images/istockphoto-1269463789-1024x1024.jpg" alt="Image" />
+                        <figure class="cc-effect"><img src="images/istockphoto-1269463789-1024x1024.jpg" alt="Image" />
                           <figcaption>
                             <div class="h4">Food Order Project</div>
                             <p>App Development</p>
@@ -297,7 +297,7 @@
                   <div class="col-md-6">
                     <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                       <a href="#graphic-design">
-                        <figure class="cc-effect"><img src="/images/istockphoto-1280436988-1024x1024.jpg" alt="Image" />
+                        <figure class="cc-effect"><img src="images/istockphoto-1280436988-1024x1024.jpg" alt="Image" />
                           <figcaption>
                             <div class="h4">E-commerce App</div>
                             <p>App Development</p>
@@ -586,7 +586,7 @@
       </div> -->
       <!-- *************************************************************************************** -->
        <div class="section" id="contact">
-        <div class="cc-contact-information" style="background-image: url(/images/Screenshot\ \(129\).png)">
+        <div class="cc-contact-information" style="background-image: url('images/Screenshot\ \(129\).png')">
           <div class="container">
             <div class="cc-contact">
               <div class="row">
