--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
         </div>
       </div> -->
       <!-- *************************************************************************************** -->
-       <div class="section" id="contact">
+      <div class="section" id="contact">
         <div class="cc-contact-information" style="background-image: url('images/Screenshot\ \(129\).png')">
           <div class="container">
             <div class="cc-contact">
@@ -602,8 +602,8 @@
                               <div class="col">
                                 <div class="input-group"><span class="input-group-addon"><i
                                       class="fa fa-user-circle"></i></span>
-                                  <input class="form-control" type="text" name="name" placeholder="Name"
-                                    required="required" />
+                                  <input class="form-control" type="text" name="name" style="background-color: black;"
+                                    placeholder="Name" required="required" />
                                 </div>
                               </div>
                             </div>
@@ -611,8 +611,8 @@
                               <div class="col">
                                 <div class="input-group"><span class="input-group-addon"><i
                                       class="fa fa-file-text"></i></span>
-                                  <input class="form-control" type="text" name="Subject" placeholder="Subject"
-                                    required="required" />
+                                  <input class="form-control" type="text" style="background-color: black;"
+                                    name="Subject" placeholder="Subject" required="required" />
                                 </div>
                               </div>
                             </div>
@@ -620,22 +620,22 @@
                               <div class="col">
                                 <div class="input-group"><span class="input-group-addon"><i
                                       class="fa fa-envelope"></i></span>
-                                  <input class="form-control" type="email" name="_replyto" placeholder="E-mail"
-                                    required="required" />
+                                  <input class="form-control" type="email" name="_replyto"
+                                    style="background-color: black;" placeholder="E-mail" required="required" />
                                 </div>
                               </div>
                             </div>
                             <div class="row mb-3">
                               <div class="col">
                                 <div class="form-group">
-                                  <textarea class="form-control" name="message" placeholder="Your Message"
-                                    required="required"></textarea>
+                                  <textarea class="form-control" name="message" style="background-color: black;"
+                                    placeholder="Your Message" required="required"></textarea>
                                 </div>
                               </div>
                             </div>
                             <div class="row">
                               <div class="col">
-                                <button class="btn btn-primary" type="submit">Send</button>
+                                <button class="btn btn-primary" style="border-color: 1px solid #ffff;" type="submit">Send</button>
                               </div>
                             </div>
                           </form>
