--- a/index.html
+++ b/index.html
@@ -635,7 +635,8 @@
                             </div>
                             <div class="row">
                               <div class="col">
-                                <button class="btn btn-primary" style="border-color: 1px solid #ffff;" type="submit">Send</button>
+                                <button class="btn btn-primary" style="border-color: 1px solid #ffff;"
+                                  type="submit">Send</button>
                               </div>
                             </div>
                           </form>
